--- a/push_app/pubspec.yaml
+++ b/push_app/pubspec.yaml
@@ -7,13 +7,17 @@ environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
+  equatable: ^2.0.5
+  firebase_messaging: ^15.0.4
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  go_router: ^14.2.3
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
